changed thr padding of the description field

--- a/app/assets/stylesheets/components/_report_details.scss
+++ b/app/assets/stylesheets/components/_report_details.scss
@@ -15,7 +15,7 @@
     &.open {
       max-height: 600px;
       margin-top: 1em;
-      padding: 4px 8px;
+      padding: 0 1px;
       border-top: 2px solid #6d6d6d;
       background: #383838;
     }
