--- a/app/views/components/_report_details.html.erb
+++ b/app/views/components/_report_details.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :description,
                 placeholder: "Write incident details here",
                 label: false,
-                input_html: { :style=> "background: #383838; border: none; color: #bcc4cd;"},
+                input_html: { :style=> "background: #383838; border: none; color: #bcc4cd; height: 100%;"},
                 required: false %>
   </div>
 </div>
