--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -62,6 +62,11 @@
     width: 100%;
     height: 100%;
   }
+
+  p {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .card--comment-main {
@@ -81,5 +86,10 @@
     font-size: 13px;
     color: #8E9398;
     font-family: $roboto;
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
   }
 }
