--- a/app/views/components/_feed.html.erb
+++ b/app/views/components/_feed.html.erb
@@ -1,9 +1,12 @@
-
-
 <div data-feed-target="feed" id="mainContainer">
+<div id="listContainer">
+<% all_incidents = [] %>
+<% all_incidents = @incidents %>
 <ul>
   <% @incidents.each do |incident| %>
-    <li class="card p-1 m-2"><%= link_to incident.title, incident_path(incident) %></li>
+    <li id="newsCards"><%= link_to incident.title, incident_path(incident) %></li>
+    <p><%= incident. %></p>
   <% end %>
 <ul>
+</div>
 </div>
