--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,5 +1,4 @@
 <div class="incidents-index">
-  <%= render "shared/map" %>
-  <%= render "components/home/top_container" %>
+  <%= render "components/feed" %>
   <%= render "components/filter" %>
 </div>
