--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -29,6 +29,8 @@
   p {
     font-size: 14px;
     color: rgb(223, 223, 223);
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
 
   .card--category {
