--- a/app/views/components/_report_details.html.erb
+++ b/app/views/components/_report_details.html.erb
@@ -10,5 +10,6 @@
                 label: false,
                 input_html: { :style=> "background: #383838; border: none; color: #bcc4cd; height: 100%;"},
                 required: false %>
+    <%= f.button :submit, "Report", class: "btn btn--report" %>
   </div>
 </div>
