--- a/app/views/components/_report_details.html.erb
+++ b/app/views/components/_report_details.html.erb
@@ -1,15 +1,16 @@
 <div class="card card--gray report_details" data-controller="report-details">
   <button class="report_details__button" data-action="click->report-details#openCard" data-report-details-target="button">
+    <i class="fas fa-info-circle"></i>
     Add more details (optional)
     <i class="fas fa-chevron-up"></i>
   </button>
   <div class="card__body" data-report-details-target="card">
-    <div class="mt-3"></div>
+    <div> </div>
     <%= f.input :description,
                 placeholder: "Write incident details here",
                 label: false,
-                input_html: { :style=> "background: #383838; border: none; color: #bcc4cd; height: 100%;"},
+                input_html: { :style=> "background: #383838; border: none; border-radius: 20px; color: #bcc4cd;"},
                 required: false %>
-    <%= f.button :submit, "Report", class: "btn btn--report" %>
+    <%= f.button :submit, "Report", class: "btn btn--report", input_html: { style: "overflow: hidden;"} %>
   </div>
 </div>
