--- a/app/views/incidents/_comment_card.html.erb
+++ b/app/views/incidents/_comment_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card--comment ps-1 pe-1 ms-4 me-4 mt-3" id="awesome-stuff-here">
+<div class="card--comment ps-1 pe-1 ms-4 me-4 mt-3" id="comments">
   <div class="d-flex justify-content-between card--info">
     <p><strong><%= comment.user.name %></strong></p>
     <p><%= comment.created_at.to_date %></p>
