--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -29,22 +29,6 @@
     </template>
   </div>
   <div class="d-flex justify-content-between align-items-center mt-2">
-    <p class="card--category" style="margin-bottom: 0; padding-bottom: 0;">
-    <%# result = request.location %>
-    <%#= (Geocoder::Calculations.distance_between([result.latitude, result.longitude], [@incident.latitude, @incident.longitude])).round(1) %>
-      <% meguro_lat = 35.6415 %>
-      <% meguro_long = 139.6981 %>
-      <% distance = (Geocoder::Calculations.distance_between([meguro_lat, meguro_long], [@incident.latitude, @incident.longitude])).round(0) %>
-        <%= render 'distance_icon', distance: distance %>
-      <%= distance %>
-      km away from you
-    </p>
-    <%= link_to(data: { controller: "scroll-to" }) do %>
-    <p class="card--category" style="margin-bottom: 0; padding-bottom: 0;">
-      <i class="fas fa-comment me-1" style="font-size: 16px;"></i>
-      comments
-      (<%= @incident.comments.count %>)
-    </p>
-    <% end %>
+    <%= render 'incident_card_bottom', incident: @incident  %>
   </div>
 </div>
