adjusted the position of data picker and comments checkbox

--- a/app/views/components/_incident_report.html.erb
+++ b/app/views/components/_incident_report.html.erb
@@ -2,7 +2,7 @@
   <h3 class="report_container__heading">Report on <span style="color: #238beb">Incident</span></h3>
   <p>Select a category</p>
   <%= render "components/categories" %>
-  <div class="d-flex justify-content-center">
+  <div class="d-flex justify-content-center align-items-center">
     <%= render "components/date_picker_for_report" %>
     <%= f.input :can_receive_comments,
               as: :boolean,
