removed margin bottom of report bar

--- a/app/assets/stylesheets/components/_report_bar.scss
+++ b/app/assets/stylesheets/components/_report_bar.scss
@@ -1,7 +1,8 @@
 .report {
   background: $dark-gradient;
   width: 100%;
+  height: 25%;
   margin: 0;
-  padding: 24px 16px 16px 8px;
+  padding: 24px 16px 0px 16px;
   text-align: center;
   }
