fixed margins and added feed route

--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -17,9 +17,9 @@
     class="mt-1"
   >
     <p data-read-more-target="content">
-      <%= @incident.description.first(500) %>...
+      <%= @incident.description.first(250) %>...
     </p>
-    <div class="d-flex justify-content-end">
+    <div class="d-flex justify-content-end mt-1">
       <button data-action="read-more#toggle">
         See more
       </button>
