--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,9 +6,9 @@
   overflow: hidden;
   margin-bottom: 24px;
 
-  &__body {
-    padding: 1rem 1.5rem;
-  }
+  // &__body {
+  //   padding: 1rem 1.5rem;
+  // }
 
   &.card--dark {
     background: $dark;
