--- a/app/views/components/_incident_report.html.erb
+++ b/app/views/components/_incident_report.html.erb
@@ -1,7 +1,7 @@
 <div class="report">
   <div class="mb-0">
     <h3 class="report_container__heading">Report on <span style="color: #238beb">Incident</span></h3>
-    <p>Select a category</p>
+    <p style="margin-bottom: 0">Select a category</p>
   </div>
   <%= render "components/categories" %>
   <div class="d-flex justify-content-center align-items-center my-0">
