--- a/app/views/components/_report_details.html.erb
+++ b/app/views/components/_report_details.html.erb
@@ -5,11 +5,10 @@
     <i class="fas fa-chevron-up"></i>
   </button>
   <div class="card__body" data-report-details-target="card">
-    <div> </div>
     <%= f.input :description,
                 placeholder: "Write incident details here",
                 label: false,
-                input_html: { :style=> "background: #383838; border: none; border-radius: 20px; color: #bcc4cd;"},
+                input_html: { :style=> "background: #383838; border: none; border-radius: 1rem; color: #bcc4cd;"},
                 required: false %>
     <%= f.button :submit, "Report", class: "btn btn--report", input_html: { style: "overflow: hidden;"} %>
   </div>
