--- a/app/views/incidents/_map.html.erb
+++ b/app/views/incidents/_map.html.erb
@@ -1,5 +1,7 @@
-<div style="width: 100%; height: 180px; border-radius: 0 0 16px 16px"
+<div class="incident-show__map" data-read-more-target="map">
+  <div
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @marker.to_json %>"
   data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
