--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -3,6 +3,5 @@
   class="mapbox"
   data-controller="mapbox"
   data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-  data-mapbox-markers-value="<%= @markers.to_json %>"
-  >
+  data-mapbox-markers-value="<%= @markers.to_json %>">
 </div>
