refactored incidents show

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,8 +4,7 @@
   width: 100%;
   background-color: #181818;
   border: 0px;
-  padding-top: 16px;
-  padding-bottom: 8px;
+  padding-block: 1rem;
 
   form {
     width: 90%;
