--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -7,7 +7,7 @@
     <a class="nav__link" href="/incidents"><i class="fas fa-newspaper"></i></a>
   </li>
   <li>
-    <a class="nav__link" href="/add"><i class="fas fa-plus"></i></a>
+    <a class="nav__link" href="/incidents/new"><i class="fas fa-plus"></i></a>
   </li>
   <li>
     <a class="nav__link" href="/routes"><i class="fas fa-map-marked-alt"></i></a>
