--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,5 +1,5 @@
 <div class="overflow-scroll" style="max-height: 700px">
-  <div class="container ps-3 pe-3 pt-3 mb-1">
+  <div class="container ps-3 pe-3 pt-3">
     <div class="d-flex justify-content-start link--incident-details">
       <%= link_to "<p style='margin-bottom: 0; padding-bottom:0;'><i class='fas fa-chevron-left me-2'></i>Back</p>".html_safe, "#" %>
     </div>
