fixed an input field issue

--- a/app/views/components/_report_details.html.erb
+++ b/app/views/components/_report_details.html.erb
@@ -2,7 +2,7 @@
   <button class="report_details__button" data-action="click->report-details#openCard" data-report-details-target="button">
     <i class="fas fa-info-circle"></i>
     Add more details (optional)
-    <i class="fas fa-chevron-up"></i>
+    <span class="arrow"><i class="fas fa-chevron-up"></i></span>
   </button>
   <div class="card__body" data-report-details-target="card">
     <%= f.input :description,
