--- a/app/assets/stylesheets/components/_report_details.scss
+++ b/app/assets/stylesheets/components/_report_details.scss
@@ -1,6 +1,6 @@
 .report_details {
   position: fixed;
-  bottom: 10rem;
+  bottom: 7rem;
   left: 50%;
   transform: translateX(-50%);
   width: 90%;
@@ -15,10 +15,11 @@
     padding: 0;
     transition: all 0.3s ease-in-out;
     max-height: 0px;
+    overflow: hidden;
 
     &.open {
-      max-height: 300px;
-      margin-top: 1em;
+      max-height: 800px;
+      margin-top: 0.7em;
       padding: 0 1px;
       border-top: 2px solid #6d6d6d;
       background: #383838;
@@ -40,7 +41,7 @@
     }
 
     &.open {
-      i {
+      .arrow i {
         transform: rotate(180deg);
       }
     }
