added scroll to feed

--- a/app/views/incidents/_incident_back_button.html.erb
+++ b/app/views/incidents/_incident_back_button.html.erb
@@ -1,4 +1,6 @@
-<%= link_to "#" do %>
-  <i class='fas fa-chevron-left me-2'></i>
-  Back
-<% end %>
+<div class="link--incident-details">
+  <%= link_to "#" do %>
+    <i class='fas fa-chevron-left me-2'></i>
+    Back
+  <% end %>
+</div>
