--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -10,14 +10,14 @@
       </div>
     </div>
   </div>
-  <div
-    class="mt-1"
-  >
+  <div class="mt-1" data-controller="read-more"
+      data-read-more-more-text-value="Read more"
+      data-read-more-less-text-value="Read less">
     <p data-read-more-target="content">
       <%= @incident.description.first(250) %>...
     </p>
     <div class="d-flex justify-content-end">
-      <button data-action="click->read-more#open">
+      <button data-action="read-more#toggle">
         See more
       </button>
     </div>
