--- a/app/views/incidents/_tags.html.erb
+++ b/app/views/incidents/_tags.html.erb
@@ -1,3 +1,5 @@
-<% @incident.category_list.each do |category| %>
-  <span class="tags--category me-2"><%= category %></span>
-<% end %>
+<div class="d-flex justify-content-end">
+  <% @incident.category_list.each do |category| %>
+    <span class="tags--category me-2"><%= category %></span>
+  <% end %>
+</div>
