--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,12 +1,10 @@
 <div class="incident-show">
-  <div class="container ps-3 pe-3 mt-5">
+  <div class="container ps-3 pe-3 mt-4">
     <%= render "incidents/incident_back_button" %>
     <%= render 'tags', incident: @incident %>
-    <div class="incident-show__details card--incident-details"     data-controller="read-more">
+    <div class="incident-show__details card--incident-details">
       <%= render 'incident_card', incident: @incident %>
-      <%= render 'map', data: {
-        read_more_target: "map"
-      } %>
+      <%= render 'map' %>
     </div>
   </div>
   <div class="incident-show__comments">
