--- a/app/views/incidents/_map.html.erb
+++ b/app/views/incidents/_map.html.erb
@@ -1,7 +1,5 @@
-<div class="incident-show__map" data-read-more-target="map">
-  <div
-    data-controller="mapbox"
-    data-mapbox-markers-value="<%= @markers.to_json %>"
-    data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
+<div style="width: 100%; height: 120px; border-radius: 0 0 16px 16px"
+  data-controller="mapbox"
+  data-mapbox-markers-value="<%= @markers.to_json %>"
+  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
