added margin to tags

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,7 +1,9 @@
 <div class="incident-show">
   <div class="container ps-3 pe-3 mt-4">
     <%= render "incidents/incident_back_button" %>
-    <%= render 'tags', incident: @incident %>
+    <div class="pb-1">
+      <%= render 'tags', incident: @incident %>
+    </div>
     <div class="incident-show__details card--incident-details">
       <%= render 'incident_card', incident: @incident %>
       <%= render 'map' %>
