--- a/app/views/components/_incident_report.html.erb
+++ b/app/views/components/_incident_report.html.erb
@@ -1,10 +1,15 @@
 <div class="report">
   <div class="mb-0">
     <h3 class="report_container__heading">Report on <span style="color: #238beb">Incident</span></h3>
-    <p style="margin-bottom: 0">Select a category</p>
+    <%= f.input :location,
+              input_html: { data: { geocoder_target: "location" }, class: "search" },
+              wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } },
+              label: false,
+              placeholder: "Enter a location" %>
+    <p>Select a category</p>
   </div>
   <%= render "components/categories" %>
-  <div class="d-flex justify-content-center align-items-center my-0">
+  <div class="date-and-comments">
     <%= render "components/date_picker_for_report" %>
     <%= f.input :can_receive_comments,
               as: :boolean,
