--- a/app/assets/stylesheets/components/_report_bar.scss
+++ b/app/assets/stylesheets/components/_report_bar.scss
@@ -7,7 +7,7 @@
   text-align: center;
 
   input.search {
-    margin-bottom: 0;
+    margin-bottom: 1px;
     border-radius: 1rem;
     background: #e5e5e5;
     color: #393939;
