--- a/app/views/feed/_feed_card.html.erb
+++ b/app/views/feed/_feed_card.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
   <p class="card--description"><%= incident.description.first(100)... %></p>
-  <div class="card--bottom d-flex justify-content-between mt-2">
+  <div class="card--bottom d-flex justify-content-between align-items-end mt-2">
     <% meguro_lat = 35.6415 %>
     <% meguro_long = 139.6981 %>
     <% distance = (Geocoder::Calculations.distance_between([meguro_lat, meguro_long], [incident.latitude, incident.longitude])).round(0) %>
