--- a/app/views/feed/_icon.html.erb
+++ b/app/views/feed/_icon.html.erb
@@ -1,6 +1,6 @@
 <% if category == 'Violence'%>
   <%= image_tag 'violence.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
-<% elsif category == 'Harassment/SA' %>
+<% elsif category == 'Harassment' %>
   <%= image_tag 'harassment.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% elsif category == 'Drugs' %>
   <%= image_tag 'drugs.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
