--- a/app/views/feed/_search.html.erb
+++ b/app/views/feed/_search.html.erb
@@ -1,5 +1,5 @@
 <div class="form--search d-flex justify-content-center">
-  <%= form_tag root_path, method: :get do %>
+  <%= form_tag feed_path, method: :get do %>
   <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Enter a location"%>
   <%= submit_tag "Search", style: "display: none;"%>
   <% end %>
