added function to filters

--- a/app/views/feed/_buttons.html.erb
+++ b/app/views/feed/_buttons.html.erb
@@ -1,12 +1,12 @@
-<div data-controller="active-link" class="ps-3 pe-3">
+<div class="ps-3 pe-3">
   <div class="d-flex justify-content-center gap-2">
-    <a class="btn top_container__button active" style="width: 100%;" href="">
+    <a class="btn top_container__button" style="width: 100%;" href="/feed">
       All
     </a>
-    <a class="btn top_container__button" style="width: 100%;"href="">
+    <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=crimenews">
       Crime News
     </a>
-    <a class="btn top_container__button" style="width: 100%;" href="">
+    <a class="btn top_container__button" style="width: 100%;" href="/feed?filter=userreports">
       User Reports
     </a>
 </div>
