--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -2,6 +2,11 @@
   <%= simple_form_for @incident do |f| %>
     <%= render "components/incident_report", f: f %>
     <%# <%= f.input :category_list, label: "Add categories", as: :check_boxes, collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment/SA", "Disturbing the Peace", "Traffic" ] %>
-    <%= render "components/report_details", f: f %>
+    <div style="background: $dark-gradient;">
+      <%= render "components/report_details", f: f %>
+    </div>
   <% end %>
+  <div style="z-index: 1; width: 100%; height: 190px;">
+    <%= render 'shared/map', data: { read_more_target: "map" } %>
+  </div>
 </div>
