changed from markers to marker in incidents/map

--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -7,6 +7,6 @@
     </div>
   <% end %>
   <div style="z-index: 1; width: 100%; height: 190px;">
-    <%= render 'shared/map', data: { read_more_target: "map" } %>
+    <%= render 'shared/map' %>
   </div>
 </div>
