--- a/app/views/components/_incident_report.html.erb
+++ b/app/views/components/_incident_report.html.erb
@@ -5,7 +5,8 @@
               input_html: { data: { geocoder_target: "location" }, class: "search" },
               wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } },
               label: false,
-              placeholder: "Enter a location" %>
+              placeholder: "Enter a location",
+              :as => :hidden %>
     <p>Select a category</p>
   </div>
   <%= render "components/categories" %>
