refactored the codes for the details card

--- a/app/assets/stylesheets/components/_report_details.scss
+++ b/app/assets/stylesheets/components/_report_details.scss
@@ -26,6 +26,12 @@
     }
   }
 
+  input.description {
+    color: #bcc4cd;
+    background: #383838;
+    border: none;
+    border-radius: 1rem;
+  }
 
   &__button {
     background: transparent;
