--- a/app/assets/stylesheets/pages/incidents/show.scss
+++ b/app/assets/stylesheets/pages/incidents/show.scss
@@ -5,7 +5,6 @@
 
   &__details.card--incident-details {
     margin-top: 0.5rem;
-    overflow: hidden;
     background-color: #333333;
     border-radius: 16px;
     font-family: $roboto;
@@ -32,22 +31,26 @@
   }
 
   &__map {
-    transition: all 0.5s;
-    height: 0;
+    // transition: all 0.5s;
+    // height: 0;
     width: 100%;
+    height: 120px;
 
-    &.open {
-      height: 300px;
+    // &.open {
+      // height: 300px;
+    // }
+
+    .mapboxgl-map {
+      overflow: unset;
     }
 
     .mapboxgl-canvas.open {
       transition: all 0.5s;
-      position: unset;
     }
 
-    .mapboxgl-control-container {
-      display: none;
-    }
+    // .mapboxgl-control-container {
+    //   display: none;
+    // }
   }
 
   &__comments {
