fixed show page, added scroll and map:

--- a/app/assets/stylesheets/pages/incidents/show.scss
+++ b/app/assets/stylesheets/pages/incidents/show.scss
@@ -1,8 +1,4 @@
 .incident-show {
-  max-height: calc(100vh - 130px);
-  display: flex;
-  flex-direction: column;
-
   &__details.card--incident-details {
     margin-top: 0.5rem;
     background-color: #333333;
@@ -30,33 +26,33 @@
     }
   }
 
-  &__map {
-    // transition: all 0.5s;
-    // height: 0;
-    width: 100%;
-    height: 120px;
+  // &__map {
+  //   // transition: all 0.5s;
+  //   // height: 0;
+  //   width: 100%;
+  //   height: 120px;
 
-    // &.open {
-      // height: 300px;
-    // }
+  //   // &.open {
+  //     // height: 300px;
+  //   // }
 
-    .mapboxgl-map {
-      overflow: unset;
-    }
+  //   .mapboxgl-map {
+  //     overflow: unset !important;
+  //   }
 
-    .mapboxgl-canvas.open {
-      transition: all 0.5s;
-    }
+  //   // .mapboxgl-canvas.open {
+  //   //   transition: all 0.5s;
+  //   // }
 
-    // .mapboxgl-control-container {
-    //   display: none;
-    // }
-  }
+  //   // .mapboxgl-control-container {
+  //   //   display: none;
+  //   // }
+  // }
 
-  &__comments {
-    max-height: 100%;
-    height: 100%;
-    overflow: scroll;
-    margin-block: 1rem 0.5rem;
-  }
+  // &__comments {
+  //   max-height: 100%;
+  //   height: 100%;
+  //   overflow: scroll;
+  //   margin-block: 1rem 0.5rem;
+  // }
 }
