--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -28,7 +28,7 @@
       <p><%= @incident.description %></p>
     </template>
   </div>
-  <div class="d-flex justify-content-between align-items-center mt-2">
+  <div class="d-flex justify-content-between align-items-end mt-2">
     <%= render 'incident_card_bottom', incident: @incident  %>
   </div>
 </div>
