fixed navlinks href

--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -16,12 +16,12 @@
     <% end %>
   </li>
   <li>
-    <%= link_to "/incidents/route", class:"nav__link" do %>
+    <%= link_to "/route", class:"nav__link" do %>
       <i class="fas fa-map-marked-alt"></i>
     <% end %>
   </li>
   <li>
-    <%= link_to "/incidents/notifications", class:"nav__link" do %>
+    <%= link_to "/notifications", class:"nav__link" do %>
       <i class="fas fa-chart-bar"></i>
     <% end %>
   </li>
