renamed active-link controller to nav-link

--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -1,5 +1,4 @@
-<!-- TODO: Replace href placeholders -->
-<ul class="nav__links" data-controller="active-link">
+<ul class="nav__links" data-controller="nav-link">
   <li>
     <%= link_to "/", class:"nav__link" do %>
       <i class="fas fa-home"></i>
