--- a/app/views/incidents/_map.html.erb
+++ b/app/views/incidents/_map.html.erb
@@ -2,5 +2,7 @@
     data-controller="mapbox"
     data-mapbox-markers-value="<%= @marker.to_json %>"
     data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-    style="width: 100%; height: 120px;">
+    style="width: 100%; height: 120px;"
+    data-mapbox-target="noSearch"
+>
 </div>
