changed root nav link target from '/' to 'home'

--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -1,7 +1,7 @@
 <ul class="nav__links" data-controller="nav-link">
   <li>
-    <%= link_to "/", class:"nav__link active", data: {
-      "nav-link-target": "/"
+    <%= link_to "/", class:"nav__link", data: {
+      "nav-link-target": "home"
     } do %>
       <i class="fas fa-home"></i>
     <% end %>
