added active button for feed

--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -6,7 +6,7 @@
     <% end %>
   </li>
   <li>
-    <%= link_to "/incidents", class:"nav__link" do %>
+    <%= link_to "/feed", class:"nav__link" do %>
       <i class="fas fa-newspaper"></i>
     <% end %>
   </li>
