--- a/app/views/feed/_buttons.html.erb
+++ b/app/views/feed/_buttons.html.erb
@@ -1,13 +1,35 @@
 <div class="ps-3 pe-3">
   <div class="d-flex justify-content-center gap-2">
-    <a class="btn top_container__button" style="width: 100%;" href="/feed">
-      All
-    </a>
-    <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=crimenews">
-      Crime News
-    </a>
-    <a class="btn top_container__button" style="width: 100%;" href="/feed?filter=userreports">
-      User Reports
-    </a>
-</div>
+    <% if params[:filter] == "crimenews" %>
+      <a class="btn top_container__button" style="width: 100%;" href="/feed">
+        All
+      </a>
+      <a class="btn top_container__button active" style="width: 100%;"href="/feed?filter=crimenews">
+        Crime News
+      </a>
+      <a class="btn top_container__button" style="width: 100%;" href="/feed?filter=userreports">
+        User Reports
+      </a>
+    <% elsif params[:filter] == "userreports" %>
+      <a class="btn top_container__button" style="width: 100%;" href="/feed">
+        All
+      </a>
+      <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=crimenews">
+        Crime News
+      </a>
+      <a class="btn top_container__button active" style="width: 100%;" href="/feed?filter=userreports">
+        User Reports
+      </a>
+    <% else %>
+      <a class="btn top_container__button active" style="width: 100%;" href="/feed">
+        All
+      </a>
+      <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=crimenews">
+        Crime News
+      </a>
+      <a class="btn top_container__button" style="width: 100%;" href="/feed?filter=userreports">
+        User Reports
+      </a>
+    <% end %>
+  </div>
 </div>
