--- a/app/views/feed/_category_list.html.erb
+++ b/app/views/feed/_category_list.html.erb
@@ -1,47 +1,379 @@
 <!-- TODO: Change icon colors to primary -->
+
+
+<!-- violence -->
+<% if params[:category] == 'violence' %>
   <div class="categories__list">
-    <!-- Item Start -->
     <div class="categories__item">
-      <%= image_tag "violence", style: "height: 40px; width: 40px;" %>
+      <%= link_to "/feed?category=violence" do %>
+        <%= image_tag "violence", style: "height: 40px; width: 40px;" %>
+      <% end %>
       <p>Violence</p>
     </div>
-    <!-- Item End -->
-    <!-- Item Start -->
     <div class="categories__item">
-      <%= image_tag "theft", style: "height: 40px; width: 40px;" %>
+      <%= link_to "/feed?category=theft" do %>
+        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
       <p>Theft</p>
     </div>
-    <!-- Item End -->
-    <!-- Item Start -->
     <div class="categories__item">
-      <%= image_tag "harassment", style: "height: 40px; width: 40px;" %>
-      <p>Harassment</p>
+      <%= link_to "/feed?category=harassment" do %>
+        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+        <p>Harassment</p>
     </div>
-    <!-- Item End -->
-
-    <!-- Item Start -->
     <div class="categories__item">
-      <%= image_tag "disturb", style: "height: 40px; width: 40px;" %>
+      <%= link_to "/feed?category=disturb" do %>
+        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
       <p>Disturbance</p>
     </div>
-    <!-- Item End -->
-    <!-- Item Start -->
     <div class="categories__item">
-      <%= image_tag "arson", style: "height: 40px; width: 40px;" %>
+      <%= link_to "/feed?category=arson" do %>
+        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
       <p>Arson</p>
     </div>
-    <!-- Item End -->
-    <!-- Item Start -->
     <div class="categories__item">
-      <%= image_tag "drugs", style: "height: 40px; width: 40px;" %>
+      <%= link_to "/feed?category=drugs" do %>
+        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
       <p>Drugs</p>
     </div>
-    <!-- Item End -->
-
-    <!-- Item Start -->
     <div class="categories__item">
-      <%= image_tag "traffic", style: "height: 40px; width: 40px;" %>
+      <%= link_to "/feed?category=traffic" do %>
+        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
       <p>Traffic</p>
     </div>
-    <!-- Item End -->
   </div>
+
+<!-- theft -->
+<% elsif params[:category] == 'theft' %>
+  <div class="categories__list">
+    <div class="categories__item">
+      <%= link_to "/feed?category=violence" do %>
+        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Violence</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=theft" do %>
+        <%= image_tag "theft", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Theft</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=harassment" do %>
+        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+        <p>Harassment</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=disturb" do %>
+        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Disturbance</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=arson" do %>
+        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Arson</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=drugs" do %>
+        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Drugs</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=traffic" do %>
+        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Traffic</p>
+    </div>
+  </div>
+
+<!-- harassment -->
+<% elsif params[:category] == 'harassment' %>
+  <div class="categories__list">
+    <div class="categories__item">
+      <%= link_to "/feed?category=violence" do %>
+        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Violence</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=theft" do %>
+        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Theft</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=harassment" do %>
+        <%= image_tag "harassment", style: "height: 40px; width: 40px;" %>
+      <% end %>
+        <p>Harassment</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=disturb" do %>
+        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Disturbance</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=arson" do %>
+        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Arson</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=drugs" do %>
+        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Drugs</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=traffic" do %>
+        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Traffic</p>
+    </div>
+  </div>
+
+<!-- disturbance -->
+<% elsif params[:category] == 'disturbance' %>
+  <div class="categories__list">
+    <div class="categories__item">
+      <%= link_to "/feed?category=violence" do %>
+        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Violence</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=theft" do %>
+        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Theft</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=harassment" do %>
+        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+        <p>Harassment</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=disturb" do %>
+        <%= image_tag "disturb", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Disturbance</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=arson" do %>
+        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Arson</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=drugs" do %>
+        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Drugs</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=traffic" do %>
+        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Traffic</p>
+    </div>
+  </div>
+
+<!-- arson -->
+<% elsif params[:category] == 'arson' %>
+  <div class="categories__list">
+    <div class="categories__item">
+      <%= link_to "/feed?category=violence" do %>
+        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Violence</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=theft" do %>
+        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Theft</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=harassment" do %>
+        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+        <p>Harassment</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=disturb" do %>
+        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Disturbance</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=arson" do %>
+        <%= image_tag "arson", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Arson</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=drugs" do %>
+        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Drugs</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=traffic" do %>
+        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Traffic</p>
+    </div>
+  </div>
+
+<!-- drugs -->
+<% elsif params[:category] == 'drugs' %>
+  <div class="categories__list">
+    <div class="categories__item">
+      <%= link_to "/feed?category=violence" do %>
+        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Violence</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=theft" do %>
+        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Theft</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=harassment" do %>
+        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+        <p>Harassment</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=disturb" do %>
+        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Disturbance</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=arson" do %>
+        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Arson</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=drugs" do %>
+        <%= image_tag "drugs", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Drugs</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=traffic" do %>
+        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Traffic</p>
+    </div>
+  </div>
+
+<!-- traffic -->
+<% elsif params[:category] == 'traffic' %>
+  <div class="categories__list">
+    <div class="categories__item">
+      <%= link_to "/feed?category=violence" do %>
+        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Violence</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=theft" do %>
+        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Theft</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=harassment" do %>
+        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+        <p>Harassment</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=disturb" do %>
+        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Disturbance</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=arson" do %>
+        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Arson</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=drugs" do %>
+        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Drugs</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=traffic" do %>
+        <%= image_tag "traffic", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Traffic</p>
+    </div>
+  </div>
+
+<!-- all -->
+<% else %>
+  <div class="categories__list">
+    <div class="categories__item">
+      <%= link_to "/feed?category=violence" do %>
+        <%= image_tag "violence", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Violence</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=theft" do %>
+        <%= image_tag "theft", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Theft</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=harassment" do %>
+        <%= image_tag "harassment", style: "height: 40px; width: 40px;" %>
+      <% end %>
+        <p>Harassment</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=disturb" do %>
+        <%= image_tag "disturb", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Disturbance</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=arson" do %>
+        <%= image_tag "arson", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Arson</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=drugs" do %>
+        <%= image_tag "drugs", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Drugs</p>
+    </div>
+    <div class="categories__item">
+      <%= link_to "/feed?category=traffic" do %>
+        <%= image_tag "traffic", style: "height: 40px; width: 40px;" %>
+      <% end %>
+      <p>Traffic</p>
+    </div>
+  </div>
+<% end %>
