added category filter

--- a/app/views/feed/_category_list.html.erb
+++ b/app/views/feed/_category_list.html.erb
@@ -23,7 +23,7 @@
         <p>Harassment</p>
     </div>
     <div class="categories__item">
-      <%= link_to "/feed?category=disturb" do %>
+      <%= link_to "/feed?category=disturbing" do %>
         <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
@@ -70,7 +70,7 @@
         <p>Harassment</p>
     </div>
     <div class="categories__item">
-      <%= link_to "/feed?category=disturb" do %>
+      <%= link_to "/feed?category=disturbing" do %>
         <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
@@ -117,7 +117,7 @@
         <p>Harassment</p>
     </div>
     <div class="categories__item">
-      <%= link_to "/feed?category=disturb" do %>
+      <%= link_to "/feed?category=disturbing" do %>
         <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
@@ -143,7 +143,7 @@
   </div>
 
 <!-- disturbance -->
-<% elsif params[:category] == 'disturbance' %>
+<% elsif params[:category] == 'disturbing' %>
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/feed?category=violence" do %>
@@ -164,7 +164,7 @@
         <p>Harassment</p>
     </div>
     <div class="categories__item">
-      <%= link_to "/feed?category=disturb" do %>
+      <%= link_to "/feed?category=disturbing" do %>
         <%= image_tag "disturb", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
@@ -211,7 +211,7 @@
         <p>Harassment</p>
     </div>
     <div class="categories__item">
-      <%= link_to "/feed?category=disturb" do %>
+      <%= link_to "/feed?category=disturbing" do %>
         <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
@@ -258,7 +258,7 @@
         <p>Harassment</p>
     </div>
     <div class="categories__item">
-      <%= link_to "/feed?category=disturb" do %>
+      <%= link_to "/feed?category=disturbing" do %>
         <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
@@ -305,7 +305,7 @@
         <p>Harassment</p>
     </div>
     <div class="categories__item">
-      <%= link_to "/feed?category=disturb" do %>
+      <%= link_to "/feed?category=disturbing" do %>
         <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
@@ -352,7 +352,7 @@
         <p>Harassment</p>
     </div>
     <div class="categories__item">
-      <%= link_to "/feed?category=disturb" do %>
+      <%= link_to "/feed?category=disturbing" do %>
         <%= image_tag "disturb", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
