fixed search box border radius

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -52,6 +52,7 @@
 .mapboxgl-ctrl.mapboxgl-ctrl-geocoder {
     margin: 0;
     background: transparent;
+    overflow: hidden;
   }
 
   .mapboxgl-ctrl-geocoder--icon {
