fixed back button on incident show page

--- a/app/views/feed/_feed_card.html.erb
+++ b/app/views/feed/_feed_card.html.erb
@@ -23,5 +23,5 @@
       (<%= incident.comments.count %>)
     </p>
   </div>
-  <%= link_to "", incident_path(incident), class: "card--link" %>
+  <%= link_to "", incident_path(incident, path: 'feed'), class: "card--link" %>
 </div>
