added functionality to filters on home page

--- a/app/views/components/_filter.html.erb
+++ b/app/views/components/_filter.html.erb
@@ -1,4 +1,4 @@
-<div class="card card--dark filter" data-controller="filter">
+<div class="card card--dark filter" data-controller="filter" style="bottom: 4em;">
   <button class="filter__button" data-action="click->filter#openCard" data-filter-target="button">
     <i class="fas fa-chevron-up"></i>
     Filter by category or date
