--- a/app/views/components/_date_picker.html.erb
+++ b/app/views/components/_date_picker.html.erb
@@ -1,22 +1,24 @@
 <!-- TODO: Fix form -->
 <!-- TODO: Set the controller -->
 <div>
-  <%= form_with url: "/incidents", method: :get, class:"date_picker" do |f| %>
-    <%= f.label :start_date, "Incidents from: " %>
-    <%= f.text_field :start_date,
+  <%= form_tag root_path, method: :get, class:"date_picker" do |f| %>
+    <%= label :start_date, "Incidents from: " %>
+    <%= text_field_tag :start_date, params[:start_date],
+      class: "me-1",
       data: {
         controller: "flatpickr",
         flatpickr_date_format: "Y-m-d",
         flatpickr_disable_mobile: "true", # Prevents native picker on mobile
-        flatpickr_default_date: "today",
+        flatpickr_default_date: params[:start_date].present? ? params[:start_date] : "today",
       }%>
-    <%= f.label :end_date, "to: " %>
-    <%= f.text_field :end_date,
+    <%= label :end_date, "to: " %>
+    <%= text_field_tag :end_date, params[:end_date],
       data: {
         controller: "flatpickr",
         flatpickr_date_format: "Y-m-d",
         flatpickr_disable_mobile: "true", # Prevents native picker on mobile
-        flatpickr_default_date: "today",
+        flatpickr_default_date: params[:end_date].present? ? params[:start_date] : "today",
       }%>
+    <%= submit_tag "Search", style: "display: none;"%>
   <% end %>
 </div>
